--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@microsoft/signalr": "^5.0.3",
+    "@snowpack/plugin-sass": "^1.3.0",
+    "@types/node": "^14.14.31",
     "snowpack": "^3.0.11"
   }
 }
