--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         - ASPNETCORE_URLS=http://+:80
         - DOTNET_USE_POLLING_FILE_WATCHER=1
     volumes:
-        - ./planning-poker:/app
+        - ./PlanningPoker:/app
     ports:
         - 8080:80
     working_dir: /app
