--- a/package.json
+++ b/package.json
@@ -15,7 +15,16 @@
   "devDependencies": {
     "@microsoft/signalr": "^5.0.3",
     "@snowpack/plugin-sass": "^1.3.0",
+    "@snowpack/plugin-svelte": "^3.5.2",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/node": "^14.14.31",
-    "snowpack": "^3.0.11"
+    "@types/snowpack-env": "^2.3.3",
+    "snowpack": "^3.0.11",
+    "svelte-preprocess": "^4.6.9",
+    "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "svelte": "^3.32.3"
   }
 }
