--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsconfig/svelte": "^1.0.10",
     "@types/node": "^14.14.31",
     "@types/snowpack-env": "^2.3.3",
+    "@zerodevx/svelte-toast": "^0.1.4",
     "snowpack": "^3.0.11",
     "svelte-preprocess": "^4.6.9",
     "typescript": "^4.2.2"
