--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "planning-poker",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Simple Planning Poker site",
   "private": true,
   "main": "index.js",
@@ -16,7 +16,7 @@
     "node": ">=14"
   },
   "devDependencies": {
-    "@microsoft/signalr": "^5.0.3",
+    "@microsoft/signalr": "~8.0.0",
     "@snowpack/plugin-sass": "^1.3.0",
     "@snowpack/plugin-svelte": "^3.5.2",
     "@snowpack/plugin-typescript": "^1.2.1",
